--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<title></title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<script src="jquery.min.js" type="text/javascript"></script>
-		<script src="bootstrap.js" type="text/javascript"></script>
-		<script src="tm.js" type="text/javascript"></script>
+		<script src="js/jquery.min.js" type="text/javascript"></script>
+		<script src="js/bootstrap.js" type="text/javascript"></script>
+		<script src="js/tm.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<div></div>
