--- a/src/main/webapp/static/index.html
+++ b/src/main/webapp/static/index.html
@@ -5,6 +5,8 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<script src="js/jquery.min.js" type="text/javascript"></script>
 		<script src="js/bootstrap.js" type="text/javascript"></script>
+		<script src="js/underscore.js" type="text/javascript"></script>		
+		<script src="js/backbone.js" type="text/javascript"></script>
 		<script src="js/tm.js" type="text/javascript"></script>
 	</head>
 	<body>
